<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="app_name">VRToxinMods</string>
    <string name="interface_cat_title">Interface</string>
    <string name="button_cat_title">Buttons</string>
    <string name="system_cat_title">System</string>
    <string name="util_cat_title">Utilities</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_launchhide">Drawer hide</string>
    <string name="action_search">Search</string>
    <string name="saveprop">Save</string>
    <string name="discardprop">Discard</string>
    <string name="deleteprop">Delete</string>
    <string name="cancelprop">Cancel</string>
    <string name="editprop_add">Add</string>
    <string name="editprop_backup">Backup</string>
    <string name="editprop_restore">Restore</string>
    <string name="action_fabhide">Show FAB</string>
    <string name="tab_indicator_alpha" translatable="false">0x26</string>
    <string name="about_frag_title">About</string>
    <string name="about_frag_summary">Look for the latest rom update and read all about us</string>
    <string name="home_frag_title">Home</string>
    <string name="kernel_adiutor_title">Kernel Adiutor</string>
    <string name="stweaks_title">STweaks</string>
    <string name="kernel_summary">Warning: Wrong usage of kernel settings can result in device damage</string>
    <string name="notification_manager">Notification Manager</string>
    <string name="icons_normal_title">Icons normal</string>
    <string name="icons_enabled_selected_title">Icons enabled&#47;selected</string>
    <string name="colors_cat_title">Customize Colors</string>
    <string name="background_title">Background</string>
    <string name="text_title">Text</string>
    <string name="buttons_actions_title">Customize</string>
    <string name="power_menu_actions_summary">Choose actions and layout for power menu</string>
    <string name="colors_power_menu_ripple_color_title">Ripple</string>
    <string name="powermenu_lockscreen_title">Show On Lock Screen</string>
    <string name="advanced_reboot_title">Advanced reboot</string>
    <string name="advanced_reboot_summary">When unlocked, include quick reboot, reboot into recovery and bootloader options.</string>
    <string name="power_menu_animation_title">Animation</string>
    <string name="power_menu_animation_summary">Change the enter/exit animation of the power menu</string>
    <string name="power_menu_animation_dialog_title">Select power menu animation</string>
    <string name="onthego_alpha_title">On-The-Go Alpha Settings</string>
    <string name="onthego_alpha_summary">Alpha value of the On-The-Go overlay. Needs re-toggling.</string>
    <string name="device_info_title">Device Information</string>
    <string name="device_summ">Get general info about your device</string>
    <string name="title_battery_history">Battery history</string>
    <string name="summary_battery_history">Summary of how battery has been used</string>
    <string name="wifi_title">WiFi information</string>
    <string name="wifi_summary">Various bits of WiFi relevant information</string>
    <string name="buildproptitle">Build.prop editor</string>
    <string name="buildpropsummary">Click to open build.prop editor</string>
    <string name="fiswitchtitle">Project Fi Tools</string>
    <string name="fiswitchsummary">Click for useful dial codes</string>
    <string name="sizer_frag_title">System App Remover</string>
    <string name="sizer_message_startup">This tool allows you to delete system apps. Use with caution and only delete apps you know are safe to be removed.</string>
    <string name="wakelock_frag_title">Wakelock Blocker</string>
    <string name="wakelock_blocker_summary">Block system wakelocks</string>
    <string name="status_bar_random_title">Random Settings</string>
    <string name="status_bar_random_summary">Configure random status bar settings</string>
    <string name="battery_settings_summary">Customize the status bar battery icon &amp; percent style</string>
    <string name="status_bar_network_status_icons_settings_title">Network Icons</string>
    <string name="status_bar_network_status_icons_settings_summary">Customize the network- &amp; status icons</string>
    <string name="status_bar_notification_icon_settings_title">Notification Icons</string>
    <string name="status_bar_notification_icon_settings_summary">Customize the notification icons</string>
    <string name="status_bar_battery_status_settings_title">Battery Customizations</string>
    <string name="status_bar_expanded_header_settings_title">Expanded Header</string>
    <string name="status_bar_expanded_header_settings_summary">Customize expanded header colors and more</string>
    <string name="status_bar_carrier_label_settings_title">Carrier Label</string>
    <string name="status_bar_carrier_label_settings_summary">Customize carrier label text, color &amp; auto hide options</string>
    <string name="status_bar_weather_temperature_title">Weather temperature</string>
    <string name="status_bar_weather_temperature_summary">Show weather temperature icon on the status bar</string>
    <string name="network_traffic_title">Network Traffic</string>
    <string name="network_traffic_summary">Enable various network traffic options in statusbar</string>
    <string name="status_bar_clock_settings_title">Clock</string>
    <string name="status_bar_clock_settings_summary">Customize position, color, font and date of clock</string>
    <string name="status_bar_greeting_settings_title">Greeting</string>
    <string name="status_bar_greeting_settings_summary">Customize greeting</string>
    <string name="status_bar_vrtoxin_logo_title">VRToxin Logo</string>
    <string name="status_bar_vrtoxin_logo_summary">Logo Switch &amp; Color</string>
    <string name="title_animation_controls">System Animations</string>
    <string name="title_animation_controls_summary">Custom system animations styles</string>
    <string name="toast_animation_title">Toast Animations</string>
    <string name="toast_animation_summary">Select &amp; preview system toast animation</string>
    <string name="toast_text_color">Toast Text Color</string>
    <string name="toast_settings">Toast Settings</string>
    <string name="listview_animation_title">ListView Animation</string>
    <string name="listview_interpolator_title">ListView Interpolator</string>
    <string name="animation_control_title">Animation Control</string>
    <string name="scrolling_title">Scrolling Animations</string>
    <string name="scrolling_summary">View or change scrolling animations</string>
    <string name="ime_animation_title">IME Animations</string>
    <string name="ime_animation_summary">Set custom animations for system keyboard</string>
    <string name="toast_icon_title">Toast App Icon</string>
    <string name="toast_icon_summary">Whether to show the app icon which created the toast</string>
    <string name="disable_animations">Disable Animations</string>
    <string name="disable_animations_summary">Disables transition animations such as when launching an app</string>
    <string name="three_finger_gesture">Three Finger Gesture</string>
    <string name="three_finger_gesture_summary">Swipe down with three fingers to screenshot</string>
    <string name="media_category">Media</string>
    <string name="notifications_category">Notifications</string>
    <string name="notification_color_frag_title">Custom Colors</string>
    <string name="custom_notification_color_settings_summary">Customize notification background, text, icons &amp; app colors</string>
    <string name="breathing_notifications_frag_title">Breathing Notifications</string>
    <string name="breathing_notifications_summary">Select what notifications you want to breath in the status bar</string>
    <string name="heads_up_notifications">Heads Up</string>
    <string name="heads_up_summary">Customize several aspects of the heads up view</string>
    <string name="force_expanded_notifications_title">Force Expanded Notifications</string>
    <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
    <string name="disable_immersive_message_title">Immersive Mode Messages</string>
    <string name="disable_immersive_message_summary">Allow/Block Immersive Mode Messages</string>
    <string name="shake_to_clean_notifications_title">Shake to clean notifications</string>
    <string name="shake_to_clean_notifications_summary">Use this switch, or longpress clear all notifications button to enable shake to clean the notifications feature</string>
    <string name="notification_section_header">Light Settings</string>
    <string name="battery_light_title">Battery Lights</string>
    <string name="notification_light_title">Notification Lights</string>
    <string name="battery_saver_notif_title">Battery saver notification</string>
    <string name="battery_saver_notif_summary">Show battery saver notification when enabled</string>
    <string name="battery_low_notif_title">Low battery notification</string>
    <string name="battery_low_notif_summary">Show low battery notification when enabled</string>
    <string name="camera_sounds_title">Camera shutter sound</string>
    <string name="camera_sounds_summary">Enable system camera shutter sound</string>
    <string name="ticker_frag_title">Ticker</string>
    <string name="ticker_screen_summary">Customize the ticker style</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="safe_headset_volume_title">Safe Headset Volume</string>
    <string name="safe_headset_volume_summary">Prevent loud volume levels when headset is first plugged in</string>
    <string name="screenshot_sound_title">Screenshot Sound</string>
    <string name="screenshot_sound_summary">Plays sound effect when screenshot is taken</string>
    <string name="less_notification_sounds_title">Less frequent notification sounds</string>
    <string name="less_notification_sounds_summary">Limit the notification sounds of each app to only play once per set time period</string>
    <string name="volume_dialog_frag_title">Volume Dialog Colors</string>
    <string name="volume_dialog_summary">Customize the volume dialog background, icon and slider colors</string>
    <string name="power_notifications_category_title">Charging sounds</string>
    <string name="power_notifications_enable_title">Enable</string>
    <string name="power_notifications_enable_summary">Play a sound when connecting or disconnecting the charger</string>
    <string name="power_notifications_vibrate_title">Vibrate</string>
    <string name="power_notifications_ringtone_title">Notification sound</string>
    <string name="power_menu_dialog_dim">Power/reboot dialog dim background amount</string>
    <string name="display_category">Display options</string>
    <string name="auto_brightness_title">Adaptive brightness</string>
    <string name="auto_brightness_summary">Optimize brightness level for available light</string>
    <string name="brightness">Brightness level</string>
    <string name="doze_title">Ambient display</string>
    <string name="doze_summary">Wake screen when you pick up device or receive notifications</string>
    <string name="screen_timeout">Screen Timeout</string>
    <string name="screen_timeout_summary">After <xliff:g id="timeout_description">%1$s</xliff:g> of inactivity</string>
    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
    <string name="lcd_density">LCD density</string>
    <string name="display_rotation_frag_title">Rotation</string>
</resources>