<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2015 The VRToxin Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:vrtoxin="http://schemas.android.com/apk/res-auto">

    <!-- Three-fingers-swipe to screenshot -->
    <com.android.vrtoxin.preferences.SystemSettingSwitchPreference
        android:key="three_finger_gesture"
        android:title="@string/three_finger_gesture"
        android:summary="@string/three_finger_gesture_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:key="animations"
        android:title="@string/animation_control_title">

        <com.android.vrtoxin.preferences.SystemSettingSwitchPreference
            android:key="disable_transition_animations"
            android:title="@string/disable_animations"
            android:summary="@string/disable_animations_summary"
            android:defaultValue="false" />

        <PreferenceScreen
            android:key="interface_animation_keyboard"
            android:title="@string/ime_animation_title"
            android:summary="@string/ime_animation_summary" />

        <ListPreference
            android:key="listview_animation"
            android:dialogTitle="@string/listview_animation_title"
            android:title="@string/listview_animation_title"
            android:entries="@array/listview_animation_entries"
            android:entryValues="@array/listview_animation_values"
            android:defaultValue="0" />

       <ListPreference
            android:key="listview_interpolator"
            android:dialogTitle="@string/listview_interpolator_title"
            android:title="@string/listview_interpolator_title"
            android:entries="@array/listview_interpolator_entries"
            android:entryValues="@array/listview_interpolator_values"
            android:defaultValue="0" />

        <Preference
            android:key="interface_animation_scroll"
            android:title="@string/scrolling_title"
            android:summary="@string/scrolling_summary" />

        <Preference
            android:key="interface_system_animation"
            android:title="@string/title_animation_controls"
            android:summary="@string/title_animation_controls_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="toast"
        android:title="@string/toast_settings">

        <ListPreference
            android:key="toast_animation"
            android:title="@string/toast_animation_title"
            android:entries="@array/toast_animation_entries"
            android:entryValues="@array/toast_animation_values"
            android:summary="@string/toast_animation_summary"
            android:persistent="false" />

        <com.android.vrtoxin.preferences.SystemSettingSwitchPreference
            android:key="toast_icon"
            android:title="@string/toast_icon_title"
            android:summary="@string/toast_icon_summary"
            android:defaultValue="true" />

        <com.android.vrtoxin.preferences.ColorPickerPreference
            android:key="toast_text_color"
            android:title="@string/toast_text_color"
            android:defaultValue="0xffffffff" />

    </PreferenceCategory>

</PreferenceScreen>
