<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The VRToxin Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:vrtoxin="http://schemas.android.com/apk/res-auto" >

    <SwitchPreference
        android:key="advanced_reboot"
        android:title="@string/advanced_reboot_title"
        android:summary="@string/advanced_reboot_summary" />

    <ListPreference
        android:key="power_menu_animations"
        android:title="@string/power_menu_animation_title"
        android:dialogTitle="@string/power_menu_animation_dialog_title"
        android:entries="@array/power_menu_animations_entries"
        android:entryValues="@array/power_menu_animations_values"
        android:summary="@string/power_menu_animation_summary"
        android:persistent="false" />

    <Preference
        android:key="power_menu_actions"
        android:title="@string/buttons_actions_title"
        android:summary="@string/power_menu_actions_summary" />

    <SlimSeekBarPreference
        android:key="on_the_go_alpha"
        android:title="@string/onthego_alpha_title"
        android:summary="@string/onthego_alpha_summary" />


    <com.android.vrtoxin.preferences.SeekBarPreference
        android:key="transparent_power_dialog_dim"
        android:title="@string/power_menu_dialog_dim"
        android:max="100"
        vrtoxin:minimum="0"
        vrtoxin:unitsLeft=""
        vrtoxin:unitsRight="%"
        android:persistent="false" />

    <com.android.vrtoxin.preferences.SystemSettingSwitchPreference
        android:key="power_menu_lockscreen"
        android:title="@string/powermenu_lockscreen_title"
        android:defaultValue="true" />

    <PreferenceCategory
        android:key="power_menu_cat_colors"
        android:title="@string/colors_cat_title">

        <com.android.vrtoxin.preferences.ColorPickerPreference
            android:key="power_menu_bg_color"
            android:title="@string/background_title"
            android:defaultValue="0xffffffff" />

        <com.android.vrtoxin.preferences.ColorPickerPreference
            android:key="power_menu_icon_normal_color"
            android:title="@string/icons_normal_title"
            android:defaultValue="0xffffffff" />

        <com.android.vrtoxin.preferences.ColorPickerPreference
            android:key="power_menu_icon_enabled_selected_color"
            android:title="@string/icons_enabled_selected_title"
            android:defaultValue="0xffffffff" />

        <com.android.vrtoxin.preferences.ColorPickerPreference
            android:key="power_menu_ripple_color"
            android:title="@string/colors_power_menu_ripple_color_title"
            android:defaultValue="0xffffffff" />

        <com.android.vrtoxin.preferences.ColorPickerPreference
            android:key="power_menu_text_color"
            android:title="@string/text_title"
            android:defaultValue="0xffffffff" />

    </PreferenceCategory>
</PreferenceScreen>
